--- a/deployment/sandbox/kubernetes/registration-processor/registration-processor-bio-dedupe-service-deployment-and-service.yml
+++ b/deployment/sandbox/kubernetes/registration-processor/registration-processor-bio-dedupe-service-deployment-and-service.yml
@@ -46,8 +46,8 @@ spec:
         - name: spring_config_url_env
           value: http://kernel-config-server:51000/config
         imagePullPolicy: Always
-      imagePullSecrets:
-      - name: pvt-reg-cred
+      # imagePullSecrets:
+      # - name: pvt-reg-cred
 ---
 apiVersion: v1
 kind: Service
