--- a/deployment/sandbox-v2/helm/charts/regproc/templates/bio-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/bio-dep.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.bio.serviceName }} 
-        image: {{ .Values.services.bio.dockerImage }}:{{ .Values.services.bio.dockerTag }} 
+        image: {{ .Values.services.bio.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
