--- a/deployment/sandbox-v2/helm/charts/regproc/templates/bio-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/bio-dep.yaml
@@ -7,7 +7,7 @@ metadata:
     app: {{ .Values.services.bio.serviceName }}
     
 spec:
-  replicas: 1
+  replicas: {{ .Values.services.bio.podconfig.replicas }}
   selector:
     matchLabels:
       app: {{ .Values.services.bio.serviceName }} 
