--- a/deployment/sandbox-v2/helm/charts/regproc/templates/bio-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/bio-dep.yaml
@@ -7,16 +7,17 @@ metadata:
     app: {{ .Values.services.bio.serviceName }}
     
 spec:
-  replicas: {{ .Values.services.bio.podconfig.replicas }}
+  {{ $podconfig := .Values.services.bio.podconfig }} 
+  replicas: {{ $podconfig.replicas }}
   selector:
     matchLabels:
-      app: {{ .Values.services.bio.serviceName }} 
-  minReadySeconds: {{ .Values.services.bio.podconfig.minReadySeconds }}
+      app: {{ .Values.services.bio.serviceName }}
+  minReadySeconds: {{ $podconfig.minReadySeconds }}
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxUnavailable: {{ .Values.services.bio.podconfig.maxUnavailable }}
-      maxSurge: {{ .Values.services.bio.podconfig.maxSurge }}
+      maxUnavailable: {{ $podconfig.maxUnavailable }}
+      maxSurge: {{ $podconfig.maxSurge }}
   template:
     metadata:
       labels:
@@ -29,8 +30,7 @@ spec:
       - name: {{ .Values.services.bio.serviceName }} 
         image: {{ .Values.services.bio.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
-        {{ $resources := .Values.services.bio.podconfig.resources }}
-        {{- include "resourcesDefinition" (dict "res" $resources) | indent 8 }}
+        {{- include "resourcesDefinition" (dict "res" $podconfig.resources) | indent 8 }}
         env:
         - name: active_profile_env
           value: {{ .Values.activeProfileEnv }} 
@@ -42,6 +42,8 @@ spec:
           value: {{ .Values.artifactoryUrl }} 
         - name: is_glowroot_env
           value: {{ .Values.isGlowroot }}
+        - name: JDK_JAVA_OPTIONS
+          value: {{ $podconfig.java_opts }}
         ports:
         - name: eventbus-port
           containerPort: {{ .Values.services.bio.ports.eventbusPort }}
